<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Camera Rental</string>
    <string name="title_activity_maps">CameraRental</string>

    <string name="camera_rental">CAMERA RENTAL</string>
    <string name="rental_cart">RENTAL CART</string>
    <string name="promotion">PROMOTION</string>
    <string name="about">ABOUT</string>

    <string name="search_equipment">Search Equipment</string>

    <string name="filter">FILTER:</string>
    <string name="all">ALL</string>
    <string name="photo">PHOTO</string>
    <string name="video">VIDEO</string>
    <string name="studio">STUDIO</string>

    
    <string name="per_day">$ PER DAY</string>
    <string name="chopped">CHOPED</string>
    <string name="add_to_cart">ADD TO CART</string>

    <string name="empty_basket">"You have nothing in your basket!

Return to the equipment list and pick something to add in here."</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="done">DONE</string>
    <string name="unit">UNIT(S)</string>
    <string name="choose_count">Choose Count</string>
    <string name="dates_required">Dates required</string>
    <string name="delete">Delete</string>

    <string name="name">Name</string>
    <string name="email_address">E-mail Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="passport_no">NRIC/FIN/Passport No.</string>
    <string name="comments"><i>Comments (if any)</i></string>
    <string name="notice">We will process your request and send you a confirmation email once the booking is confirmed.</string>
    

    <string name="our_company_address">"23 New Bridge Road, Singapore 059389"</string>
    <string name="our_company_detail_address">"23 New Bridge Road, Singapore 059389
Level 3 - Photography Camera &amp; Lens
Level 4 - Studio &amp; Video Equipment"</string>
    <string name="our_company_url">www.camerarental.biz</string>
    <string name="our_company_email">info@camerarental.biz</string>
    <string name="our_company_phone">+65 96504158</string>
    <string name="our_company_open_time">"Mon-Thu (11am-7pm), Fri (11am-7:30pm)\nSat-Sun (11am-5pm), Public Holidays (11am-3pm)\nClose on New Year's Day, Lunar New Year and Christmas."</string>

    <string name="faq_question1">"How does your rental pricing work?"</string>
    <string name="faq_answer1">"There is a bundled discount when you rent more than one item or for more than one day. The more you rent, the cheaper it gets!"</string>
    <string name="faq_question2">"I didn't receive any reply!"</string>
    <string name="faq_answer2">"If you do not receive an email reply to your booking enquiry within 24 hours, please call/SMS us at <a>96504158</a> or email to \"<a>info@camerarental.biz</a>\" so that we can check on the status of your request."</string>
    <string name="faq_question3">"What is the collection &amp; return time?"</string>
    <string name="faq_answer3">"We allow customers to collect the equipment a day before their shoot and return a day after their shoot.

Collection
Weekdays between 4-7pm
Weekends between 2:30-4:30pm
Public Holidays between 12noon-2:30pm

Return
Everyday between 11:30am-1:30pm."</string>
    <string name="faq_question4">"Do you provide delivery service?"</string>
    <string name="faq_answer4">"Yes, we provide delivery service at additional charge (depending on size and weight of equipment). This will be subject to availability of the delivery schedule. Please indicate your preference for a one-way or two-way delivery service under comments when you submit your booking request. New customers will need to register with us before delivery can be arranged."</string>


    <string name="list_item_pos">LIST_ITEM_POSITION</string>

</resources>
