<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="12dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_main_all"
                style="@style/FilterButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/radio_main_photo"
                style="@style/FilterButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo" />

            <RadioButton
                android:id="@+id/radio_main_video"
                style="@style/FilterButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />

            <RadioButton
                android:id="@+id/radio_main_studio"
                style="@style/FilterButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studio" />

        </LinearLayout>

    </RadioGroup>

</LinearLayout>